[tool.poetry]
description = "MLflow Docker with HTTP basic-auth"
authors = [ "Dmitrey Kazin <dmitrey@bynet.co.il>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
mlflow = "^2.16"
psycopg2-binary = "^2.9"
boto3 = "^1.35"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
